XMLExper/m12/m12_357_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual char* tinyxml2::XMLNode::ParseDeep(char*, tinyxml2::StrPair*, int*)’:
tinyxml2.cpp:1122:104: error: ‘virtual char* tinyxml2::XMLDeclaration::ParseDeep(char*, tinyxml2::StrPair*, int*)’ is protected within this context
 1122 |         p = /*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(node)->ParseDeep( p, &endTag, curLineNumPtr );
      |                                                                                                        ^
In file included from tinyxml2.cpp:24:
tinyxml2.h:1096:11: note: declared protected here
 1096 |     char* ParseDeep( char* p, StrPair* parentEndTag, int* curLineNumPtr ) override;
      |           ^~~~~~~~~
diff: tinyxml2.S: No such file or directory
